# compression-aware-intelligence

./: README.md
compression-aware-intelligence/: README.md  pyproject.toml  ssh-keygen -t ed25519 -C "michele.a.joseph@gmail.com"  ssh-keygen -t ed25519 -C "michele.a.joseph@gmail.com".pub
compression-aware-intelligence/cai/: __init__.py  cfi.py  latent.py  perturb.py  visualize.py
compression-aware-intelligence/examples/: cfi_demo.py
