[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cai-cfi"
version = "0.1.0"
description = "compression-aware intelligence: coherence field index"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Michele Joseph"}]
dependencies = ["numpy>=1.23.0","scikit-learn>=1.3.0","matplotlib>=3.7.0"]

[tool.setuptools.packages.find]
include = ["cai*"]